// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Lead" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <p
    css={[Function]}
  >
    Lead
  </p>
</div>
`;

exports[`"Lead" renders 1`] = `
<div
  css={[Function]}
>
  <p
    css={[Function]}
  >
    Lead
  </p>
</div>
`;

exports[`"Paragraph" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <p
    css={[Function]}
  >
    Paragraph
  </p>
</div>
`;

exports[`"Paragraph" renders 1`] = `
<div
  css={[Function]}
>
  <p
    css={[Function]}
  >
    Paragraph
  </p>
</div>
`;
